K8S/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: bakaziki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10101
        fsGroup: 10101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          image: riya2612/bakaziki-frontend:initial
          imagePullPolicy: Always
          ports:
            - containerPort: 80
        
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
             
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

          volumeMounts:
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run

      volumes:
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
