K8S/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: bakaziki-backend
  namespace: bakaziki
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
