K8S/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bakaziki-network-policy
  namespace: bakaziki

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector: {}

  egress:
    - to:
        - podSelector: {}
